GETools changelog

v1.2.3
- [OVERLAPPY] Added confirm dialog for zero particle offset.
- [UTILS] Added annotation creation draft logic.
- [UI] Replaced button icon change approach, now simply use Help/Change Icon for toggling icons.
- [UI] Added "Options" menu with euler filter checkbox.
- [UI] Moved "To Shelf" menu to the new "Options" menu.
- Setup connection between base class instance between sub classes.
- Improved euler filter method for using after baking.

v1.1.0
- [CRITICAL] Fixed compatibility with Maya 2025.
- [RIGGING] Added "Extract Shapes" logic from blendshapes.
- [UI] Added button icon change on highlight.
- [UI] Added alternative secret meme icon (need to activate in Settings "useFaceIcon = True").
- Improved cache evaluator detection.
- Moved Settings script to the root folder.
- General refactoring.

v1.0.5
- Fixed motion trails to shelf button.
- Decreased hardcode in Drag and Drop logic.
- Reworked Button Install module.
- [UI] Added tear-off to sub menus
- [UTILS] Added toggle buttons for active viewport.
- [UTILS] Added "Print Blendshapes Base Nodes".
- [UTILS] Added "Print Blendshapes Names".
- [RIGGING] Added wraps button.
- [RIGGING] Added blendshapes reconstruct button.
- [RIGGING] Added "Zero Blendshapes Weights" button.

v1.0.4
- [OVERLAPPY] Reworked Nucleus implementation with non-destructive way.
- [UTILS] Added simple SelectHierarchy method.
- Refactored code style.

v1.0.3
- Absolute import replaced by relative import.
- Added more icons on pop-up menus.

v1.0.2
- Fixed the "Set Infinity" function causing a warning message to appear in the console.

v1.0.1
- [HOTFIX] Removed cross dependency for Maya 2020.

v1.0.0
- [UI] Changed main icon and added some small icons.
- [UI] Added pop-up for shelf buttons installation.
- [UI] Decreased buttons size and renamed some labels.
- [TOOLS] Fixed bug in Locator detection logic.
- [TOOLS] Added locators size controller.
- [TOOLS] Added World baking tool.
- [TOOLS] Added offset animation tool.